welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: type mismatch;
 found   : Int
 required: String
var rep:String = a
                 ^