welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = 
{
var rep:String = a
	if(a%3 == 0)
	{
		rep = "Fizz"
		return rep
	}
	if(a%5 == 0)
	{
		rep = "Buzz"
		return rep
	}
return rep
}
